--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ th{background:#eef2ff;}
 </div>
 
 <nav style="text-align: center;">
-    <img src="./Salma-Hana.png" alt="logo" style="width: 150px; height: auto; margin: 20px auto 0 auto; display: block;">
+<img src="https://raw.githubuser content.com/salmaelmassry548-commits/SALMA-/blob/main/Salma-Hana.png" alt="logo" style="width: 150px; height: auto; margin: 20px auto 0 auto; display: block;">
 </nav>
 
 <div id="intro" class="intro-screen">
